# A_minisnap

./: README.md
geometric_controller/: CMakeLists.txt  package.xml
geometric_controller/include/geometric_controller/: math_utils.hpp
geometric_controller/launch/: geometric_controller_launch.py
geometric_controller/src/: inner_loop_controller.cpp  off_board_control.cpp  outer_loop_controller.cpp  trajectory_utils.cpp
trajectory_planner_py/: package.xml
trajectory_planner_py/launch/: planner.launch.py
trajectory_planner_py/trajectory_planner_py/: a_star_3d.py  grid_map.py  min_snap_trajectory_generators.py  planner_node.py
