cmake_minimum_required(VERSION 3.8)
project(geometric_controller)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(px4_msgs REQUIRED)
find_package(geometry_msgs REQUIRED)
find_package(std_msgs REQUIRED)
find_package(Eigen3 REQUIRED)

include_directories(
  include
  ${EIGEN3_INCLUDE_DIR}
)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()


# Executables
add_executable(inner_loop_node src/inner_loop_controller.cpp)
ament_target_dependencies(inner_loop_node rclcpp px4_msgs geometry_msgs std_msgs)

add_executable(outer_loop_node src/outer_loop_controller.cpp)
ament_target_dependencies(outer_loop_node rclcpp px4_msgs geometry_msgs std_msgs)

add_executable(off_board_node src/off_board_control.cpp)
ament_target_dependencies(off_board_node rclcpp px4_msgs)

# Install
install(TARGETS
  inner_loop_node
  outer_loop_node
  off_board_node
  DESTINATION lib/${PROJECT_NAME}
)

install(DIRECTORY include/
  DESTINATION include/
)

install(DIRECTORY launch
  DESTINATION share/${PROJECT_NAME}/
)

ament_package()
